# Atlas

./: .env.example  .gitignore  .gitmodules  ATLAS_PROTOCOL.md  AUDIT_PREP.md  CAPABILITIES.md  CLAWLOAN_BORROW.md  CLAWLOAN_LEND.md  COLLATERAL_ROTATION.md  DECISIONS.md  DEMO.md  DERIVATIVES.md  EXTENSIONS.md  EXTENSIONS_SPEC.md  OPTIONS_EXPLAINER.md  README.md  SELF_REPAYING_LOAN.md  SPEC.md  STRATEGY.md  WHITEPAPER.md  ZK_ARCHITECTURE.md  foundry.toml
Binius/binius-groth16-wrapper/: README.md  go.mod
Binius/binius-groth16-wrapper/aggregator/: aggregator.go
Binius/binius-groth16-wrapper/circuit/: circuit.go  e2e_test.go
Binius/binius-research/: Cargo.toml  PROVING_AUTHORITY.md  README.md
Binius/binius-research/envelope-circuits/: Cargo.toml
Binius/binius-research/envelope-circuits/src/: bench.rs  compliance.rs  compliance_bench.rs  export_compliance_proof.rs  export_transcript_vectors.rs  export_verifier_full_trace.rs  export_verifier_trace.rs  lib.rs  run_trace.rs  spend.rs  test_packed.rs
Binius/binius-research/envelope-circuits/src/legacy/: bench.rs  common.rs  encumber.rs  export_proof.rs  export_twiddle_basis.rs  print_iv.rs  settle.rs
Binius/binius-research/evm-verifier/: foundry.toml
Binius/binius-research/evm-verifier/src/: Binius64Verifier.sol  RingSwitch.sol
Binius/binius-research/evm-verifier/src/lib/: BiniusCompress.sol  FRIFold.sol  GF128.sol  MerkleLib.sol  Sumcheck.sol  Transcript.sol
Binius/binius-research/evm-verifier/src/protocols/: AndReduction.sol  BaseFold.sol  IntMulReduction.sol  MleCheck.sol  PublicInputCheck.sol  ShiftReduction.sol  Sumcheck.sol
Binius/binius-research/evm-verifier/test/: Binius64Verifier.t.sol  E2E.t.sol  GF128.t.sol  MerkleLib.t.sol  Sumcheck.t.sol  Transcript.t.sol
Binius/binius-research/evm-verifier/test/fixtures/: encumber_proof.json
Binius/binius-research/wasm-prover/: Cargo.toml  README.md  build.sh
Binius/binius-research/wasm-prover/.cargo/: config.toml
Binius/binius-research/wasm-prover/demo/: index.html  main.js
Binius/binius-research/wasm-prover/src/: lib.rs
Binius/binius-verifier/: README.md  foundry.toml
Binius/binius-verifier/script/: DeployBinius64SP1Verifier.s.sol  RunPathA.s.sol
Binius/binius-verifier/sp1-guest/: Cargo.toml
Binius/binius-verifier/sp1-guest/common/: Cargo.toml
Binius/binius-verifier/sp1-guest/common/src/: lib.rs
Binius/binius-verifier/sp1-guest/program/: Cargo.toml
Binius/binius-verifier/sp1-guest/program/src/: main.rs
Binius/binius-verifier/sp1-guest/script/: Cargo.toml
Binius/binius-verifier/sp1-guest/script/src/: prove.rs  verify.rs
Binius/binius-verifier/sp1-guest/src/: main.rs
Binius/binius-verifier/src/: BaseFold.sol  BinaryFieldLib.sol  BinaryFieldLibOpt.sol  Binius64NativeVerifier.sol  Binius64SP1Verifier.sol  Binius64Verifier.sol  BiniusCompress.sol  BiniusPCSVerifier.sol  CLMULPrecompile.sol  FRIFold.sol  FRIVerifier.sol  FiatShamirTranscript.sol  GF128.sol  MerkleLib.sol  MerkleVerifier.sol  RingSwitch.sol  SumcheckVerifier.sol  Transcript.sol
Binius/binius-verifier/test/: BinaryFieldLib.t.sol  BinaryFieldLibOpt.t.sol  Binius64NativeVerifier.t.sol  Binius64SP1Verifier.t.sol  Binius64Verifier.t.sol  BiniusPCSVerifier.t.sol  CLMULPrecompile.t.sol  E2EVerifier.t.sol  FRIVerifier.t.sol  GasBench.t.sol  GenTables.t.sol  Phase3.t.sol  SumcheckVerifier.t.sol
Binius/binius64-compliance/: Cargo.toml  README.md
Binius/binius64-compliance/src/: lib.rs  main.rs  service.rs
PROMPTS/: ZK_ARCHITECT_SCOPE.md
circuits/circuit1/: Nargo.toml
circuits/circuit1/contracts/: Circuit1Verifier.sol  HonkUltraVerifier.sol
circuits/circuit1/src/: main.nr
contracts/: CapabilityKernel.sol  CreditVerifier.sol  EnvelopeRegistry.sol  HashLib.sol  ReceiptAccumulator.sol  ReceiptAccumulatorSHA256.sol  SingletonVault.sol  Types.sol
contracts/adapters/: AaveV3Adapter.sol  ClawloanRepayAdapter.sol  DirectTransferAdapter.sol  LiquidationAdapter.sol  MockReverseSwapAdapter.sol  PoolPauseAdapter.sol  PriceSwapAdapter.sol  UniswapV3Adapter.sol
contracts/adapters/demo/: LiquidationAdapter.sol  MockReverseSwapAdapter.sol  PoolPauseAdapter.sol  PriceSwapAdapter.sol
contracts/interfaces/: IAdapter.sol  ICircuit1Verifier.sol  IEnvelopeRegistry.sol  IReceiptAccumulator.sol  ISingletonVault.sol
contracts/oracles/: UtilisationOracle.sol
contracts/verifiers/: BiniusCircuit1Verifier.sol  HonkCircuit1Verifier.sol
script/: Deploy.s.sol  DeployClawloanDemo.s.sol  RegisterAdapters.s.sol
sdk/: README.md  package-lock.json  package.json  vitest.config.ts
sdk/src/: adapters.ts  attester.ts  builders.ts  eip712.ts  index.ts  position.ts  prover.ts  signing.ts  types.ts
sdk/test/: debug.test.ts  eip712-parity.test.ts  integration.test.ts  prover.test.ts
sdk/test/helpers/: artifacts.ts
test/: BiniusCreditIntegration.t.sol  CapabilityKernel.t.sol  ClawloanIntegration.t.sol  EnvelopeRegistry.t.sol  ReceiptAccumulatorSHA256.t.sol  SingletonVault.t.sol
test/fork/: AaveV3Adapter.fork.t.sol  UniswapV3Adapter.fork.t.sol
test/mocks/: MockAavePool.sol  MockAdapter.sol  MockCapitalPool.sol  MockCircuit1Verifier.sol  MockClawloanPool.sol  MockConsensusHub.sol  MockCreditGatedLender.sol  MockERC20.sol  MockHealthFactorOracle.sol  MockHealthOracle.sol  MockOracle.sol  MockPriceOracle.sol  MockSubAgentHub.sol  MockTimestampOracle.sol
ui/: .env.example  README.md  index.html  package-lock.json  package.json  proof-server.mjs
ui/src/: App.tsx  wagmi.ts
ui/src/components/: FlowDiagram.tsx  HeroSection.tsx  InvestorBriefModal.tsx  KeeperModeView.tsx  KeeperNetworkPanel.tsx  LenderPanel.tsx  LogPanel.tsx  ProofTimeline.tsx  ScenarioNav.tsx  SigningProgress.tsx  StatusBar.tsx  StepCard.tsx  TierUpgradeOverlay.tsx  TxButton.tsx  WithoutAtlasCard.tsx
ui/src/contracts/: abis.ts  addresses.ts
ui/src/hooks/: useChainState.ts
ui/src/lib/: creditProof.ts  triggerEnvelope.ts
ui/src/scenarios/: CapitalProviderScenario.tsx  ChainedStrategyScenario.tsx  DeadMansSwitchScenario.tsx  LiquidationScenario.tsx  MofNScenario.tsx  PublishKeyScenario.tsx  StopLossScenario.tsx  (+2 more)
(+68 files in other folders)
