[workspace]
members = ["envelope-circuits"]
resolver = "2"

# ─── Binius dependency configuration ─────────────────────────────────────────
#
# Uses the current upstream binius from Irreducible Labs:
#   https://github.com/IrreducibleOSS/binius
#
# The m3 API is the current frontend. The old binius-frontend/binius-circuits
# were removed from upstream in 2025.

[workspace.dependencies]
binius_core         = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_core", default-features = false }
binius_compute      = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_compute", default-features = false }
binius_fast_compute = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_fast_compute", default-features = false }
binius_field        = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_field", default-features = false }
binius_hal          = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_hal", default-features = false }
binius_hash         = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_hash", default-features = false }
binius_m3           = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_m3", default-features = false, features = ["test_utils"] }
binius_macros       = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_macros", default-features = false }
binius_math         = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_math", default-features = false }
binius_utils        = { git = "https://github.com/IrreducibleOSS/binius", rev = "6e812cdc", package = "binius_utils", default-features = false }

anyhow  = "1"
sha2    = "0.10"
digest  = "0.10"
hex     = "0.4"
tracing = "0.1"
tracing-profile = "0.10.9"
rand    = { version = "0.9.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
bytesize = "2.0"
clap    = { version = "4.5", features = ["derive"] }
array-util = "1.0.2"
bytemuck = { version = "1.18", features = ["derive", "min_const_generics", "must_cast"] }
itertools = "0.14"

[profile.release]
lto = "thin"
