[package]
name = "envelope-circuits"
version = "0.1.0"
edition = "2024"

# Atlas Protocol — Binius m3 envelope circuits
#
# This crate implements:
#   - compliance: proves rolling receipt root chain via SHA-256 (Atlas Circuit 1 equivalent)
#
# Uses the binius m3 API (current upstream frontend).

[dependencies]
binius_core         = { workspace = true }
binius_compute      = { workspace = true }
binius_fast_compute = { workspace = true }
binius_field        = { workspace = true }
binius_hal          = { workspace = true }
binius_hash         = { workspace = true }
binius_m3           = { workspace = true }
binius_math         = { workspace = true }
binius_utils        = { workspace = true }

anyhow       = { workspace = true }
sha2         = { workspace = true }
digest       = { workspace = true }
hex          = { workspace = true }
tracing      = { workspace = true }
tracing-profile = { workspace = true }
rand         = { workspace = true }
bytesize     = { workspace = true }
clap         = { workspace = true }
array-util   = { workspace = true }
bytemuck     = { workspace = true }
itertools    = { workspace = true }

[features]
default = ["rayon"]
rayon = ["binius_utils/rayon"]

[[bin]]
name  = "compliance-bench"
path  = "src/compliance_bench.rs"

[[bin]]
name  = "test-packed"
path  = "src/test_packed.rs"
